--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     <canvas id="canvas"></canvas>
     <img src="" alt="" id="image" />
-    <script src="./src/server.js"></script>
+    <script src="https://meomaymap.github.io/qrcode-with-logos/src/server.js"></script>
   </body>
 </html>
